Fix font size and spacing issues

--- a/src/scss/common/footer.scss
+++ b/src/scss/common/footer.scss
@@ -50,7 +50,6 @@
 
   .footer-link {
     font-family: $primary-font;
-    font-size: 16px;
   }
 
   .logo-col {
